Fixed Windows text entry transparency and transparent gap on title entry

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -138,7 +138,14 @@ i {
   vertical-align: middle;
 }
 
+.entry .content .empty {
+  background-color: #202630;
+  max-height: 1px;
+  min-height: 1px;
+}
+
 .entry .content .text {
+  background-color: #202630;
   font-family: "Roboto", sans-serif;
   padding: 3px 3px;
   font-weight: normal;
